jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int ECF_ConfigBarras_GetAltura(const INTPTR ecfHandle, int* value);

DllImport int ECF_ConfigBarras_GetLarguraLinha(const INTPTR ecfHandle, int* value);

DllImport int ECF_ConfigBarras_GetMostrarCodigo(const INTPTR ecfHandle);

DllImport int ECF_ConfigBarras_SetAltura(const INTPTR ecfHandle, const int value);

DllImport int ECF_ConfigBarras_SetLarguraLinha(const INTPTR ecfHandle, const int value);

DllImport int ECF_ConfigBarras_SetMostrarCodigo(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_Consumidor_AtribuiConsumidor(const INTPTR ecfHandle, const PCHAR CPF_CNPJ, const PCHAR Nome, const PCHAR Endereco);

DllImport int ECF_Consumidor_GetAtribuido(const INTPTR ecfHandle);

DllImport int ECF_Consumidor_GetEnviado(const INTPTR ecfHandle);

DllImport int ECF_Consumidor_GetNome(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_Consumidor_SetEnviado(const INTPTR ecfHandle, const BOOL value);

DllImport int ECF_Consumidor_Zera(const INTPTR ecfHandle);

DllImport int ECF_GetAguardaImpressao(const INTPTR ecfHandle);

DllImport int ECF_GetAguardandoResposta(const INTPTR ecfHandle);

DllImport int ECF_GetAtivo(const INTPTR ecfHandle);

DllImport int ECF_GetColunas(const INTPTR ecfHandle);

DllImport int ECF_GetComandoLOG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetDataHora(const INTPTR ecfHandle, double* value);

DllImport int ECF_GetModeloStr(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetRFDID(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_SetAguardaImpressao(const INTPTR ecfHandle, const BOOL aguardaImpressao);

DllImport int ECF_SetComandoLOG(const INTPTR ecfHandle, const PCHAR comandoLog);